Fix threads background color in dark mode

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -289,7 +289,7 @@
 
   .thread__link {
     display: block;
-    background-color: white;
+    background-color: var(--color-bg);
     border-radius: 0.5em;
     border: 1px solid var(--color-border);
     font-family: sans-serif;
